--- a/src/app/components/admin/challenge-management/challenge-management.html
+++ b/src/app/components/admin/challenge-management/challenge-management.html
@@ -16,18 +16,20 @@
       <table mat-table [dataSource]="challenges" class="mat-elevation-z8">
         <!-- Título Column -->
         <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef> Título </th>
-          <td mat-cell *matCellDef="let challenge"> {{challenge.title}} </td>
+          <th mat-header-cell *matHeaderCellDef>Título</th>
+          <td mat-cell *matCellDef="let challenge">{{challenge.title}}</td>
         </ng-container>
 
         <!-- Estado Column -->
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Estado </th>
-          <td mat-cell *matCellDef="let challenge"> 
-            <span [class.status-badge]="true" 
-                  [class.upcoming]="challenge.status === 'próximo'"
-                  [class.active]="challenge.status === 'activo'"
-                  [class.past]="challenge.status === 'pasado'">
+          <th mat-header-cell *matHeaderCellDef>Estado</th>
+          <td mat-cell *matCellDef="let challenge">
+            <span
+              [class.status-badge]="true"
+              [class.upcoming]="challenge.status === 'próximo'"
+              [class.active]="challenge.status === 'activo'"
+              [class.past]="challenge.status === 'pasado'"
+            >
               {{challenge.status}}
             </span>
           </td>
@@ -35,64 +37,84 @@
 
         <!-- Fechas Column -->
         <ng-container matColumnDef="dates">
-          <th mat-header-cell *matHeaderCellDef> Fechas </th>
-          <td mat-cell *matCellDef="let challenge"> 
-            {{challenge.startDate | date:'shortDate'}} - {{challenge.endDate | date:'shortDate'}}
+          <th mat-header-cell *matHeaderCellDef>Fechas</th>
+          <td mat-cell *matCellDef="let challenge">
+            {{challenge.startDate | date:'shortDate'}} - {{challenge.endDate |
+            date:'shortDate'}}
           </td>
         </ng-container>
 
         <!-- Costo Column -->
         <ng-container matColumnDef="cost">
-          <th mat-header-cell *matHeaderCellDef> Costo </th>
-          <td mat-cell *matCellDef="let challenge"> 
+          <th mat-header-cell *matHeaderCellDef>Costo</th>
+          <td mat-cell *matCellDef="let challenge">
             {{challenge.participationCost | currency:'COP':'symbol':'1.0-0'}}
           </td>
         </ng-container>
 
         <!-- Participantes Column -->
         <ng-container matColumnDef="participants">
-          <th mat-header-cell *matHeaderCellDef> Participantes </th>
-          <td mat-cell *matCellDef="let challenge"> 
+          <th mat-header-cell *matHeaderCellDef>Participantes</th>
+          <td mat-cell *matCellDef="let challenge">
             {{challenge.totalPot / challenge.participationCost || 0}}
           </td>
         </ng-container>
 
         <!-- Acciones Column -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let challenge" class="actions-cell">
-            <button mat-icon-button color="primary" (click)="openChallengeForm(challenge)" matTooltip="Editar">
+            <button
+              mat-icon-button
+              color="primary"
+              (click)="openChallengeForm(challenge)"
+              matTooltip="Editar"
+            >
               <mat-icon>edit</mat-icon>
             </button>
-            
+
             <ng-container *ngIf="challenge.status !== 'próximo'">
-              <button mat-icon-button color="primary" 
-                      (click)="updateChallengeStatus(challenge, 'próximo')" 
-                      matTooltip="Cambiar a Próximo">
+              <button
+                mat-icon-button
+                color="primary"
+                (click)="updateChallengeStatus(challenge, 'próximo')"
+                matTooltip="Cambiar a Próximo"
+              >
                 <mat-icon>event_upcoming</mat-icon>
               </button>
             </ng-container>
-            
+
             <ng-container *ngIf="challenge.status !== 'activo'">
-              <button mat-icon-button color="primary" 
-                      (click)="updateChallengeStatus(challenge, 'activo')" 
-                      matTooltip="Cambiar a Activo">
+              <button
+                mat-icon-button
+                color="primary"
+                (click)="updateChallengeStatus(challenge, 'activo')"
+                matTooltip="Cambiar a Activo"
+              >
                 <mat-icon>event_available</mat-icon>
               </button>
             </ng-container>
-            
+
             <ng-container *ngIf="challenge.status !== 'pasado'">
-              <button mat-icon-button color="primary" 
-                      (click)="updateChallengeStatus(challenge, 'pasado')" 
-                      matTooltip="Cambiar a Pasado">
+              <button
+                mat-icon-button
+                color="primary"
+                (click)="updateChallengeStatus(challenge, 'pasado')"
+                matTooltip="Cambiar a Pasado"
+              >
                 <mat-icon>event_busy</mat-icon>
               </button>
             </ng-container>
-            
-            <ng-container *ngIf="challenge.status === 'pasado' && !challenge.isPaidToWinner && challenge.winnerUserId">
-              <button mat-icon-button color="warn" 
-                      (click)="markAsPaid(challenge)" 
-                      matTooltip="Marcar como pagado">
+
+            <ng-container
+              *ngIf="challenge.status === 'pasado' && !challenge.isPaidToWinner && challenge.winnerUserId"
+            >
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="markAsPaid(challenge)"
+                matTooltip="Marcar como pagado"
+              >
                 <mat-icon>paid</mat-icon>
               </button>
             </ng-container>
