--- a/src/app/components/admin/result-verification/result-verification.html
+++ b/src/app/components/admin/result-verification/result-verification.html
@@ -18,8 +18,8 @@
       <table mat-table [dataSource]="pendingResults" class="mat-elevation-z8">
         <!-- Usuario Column -->
         <ng-container matColumnDef="user">
-          <th mat-header-cell *matHeaderCellDef> Usuario </th>
-          <td mat-cell *matCellDef="let result"> 
+          <th mat-header-cell *matHeaderCellDef>Usuario</th>
+          <td mat-cell *matCellDef="let result">
             {{result.user?.username || 'Usuario desconocido'}}
             <small>{{result.user?.aceptaelretoUsername}}</small>
           </td>
@@ -27,25 +27,27 @@
 
         <!-- Reto Column -->
         <ng-container matColumnDef="challenge">
-          <th mat-header-cell *matHeaderCellDef> Reto </th>
-          <td mat-cell *matCellDef="let result"> 
+          <th mat-header-cell *matHeaderCellDef>Reto</th>
+          <td mat-cell *matCellDef="let result">
             {{result.challenge?.title || 'Reto desconocido'}}
           </td>
         </ng-container>
 
         <!-- Puntaje Column -->
         <ng-container matColumnDef="score">
-          <th mat-header-cell *matHeaderCellDef> Puntaje </th>
-          <td mat-cell *matCellDef="let result"> 
-            {{result.score || 0}}
-          </td>
+          <th mat-header-cell *matHeaderCellDef>Puntaje</th>
+          <td mat-cell *matCellDef="let result">{{result.score || 0}}</td>
         </ng-container>
 
         <!-- Código Column -->
         <ng-container matColumnDef="code">
-          <th mat-header-cell *matHeaderCellDef> Código </th>
-          <td mat-cell *matCellDef="let result"> 
-            <button mat-button color="primary" (click)="viewCode(result.code || '')">
+          <th mat-header-cell *matHeaderCellDef>Código</th>
+          <td mat-cell *matCellDef="let result">
+            <button
+              mat-button
+              color="primary"
+              (click)="viewCode(result.code || '')"
+            >
               <mat-icon>code</mat-icon> Ver Código
             </button>
           </td>
@@ -53,11 +55,14 @@
 
         <!-- Acciones Column -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let result" class="actions-cell">
-            <button mat-raised-button color="primary" 
-                    (click)="setWinner(result)" 
-                    matTooltip="Declarar Ganador">
+            <button
+              mat-raised-button
+              color="primary"
+              (click)="setWinner(result)"
+              matTooltip="Declarar Ganador"
+            >
               <mat-icon>emoji_events</mat-icon> Ganador
             </button>
           </td>
