--- a/src/app/components/challenges/code-display/code-display.scss
+++ b/src/app/components/challenges/code-display/code-display.scss
@@ -13,7 +13,7 @@
     padding: 15px;
     border-radius: 4px;
     overflow-x: auto;
-    font-family: 'Courier New', monospace;
+    font-family: "Courier New", monospace;
     max-height: 70vh;
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -28,6 +28,6 @@
 .alert {
   padding: 15px;
   background-color: #e7f3fe;
-  border-left: 6px solid #2196F3;
+  border-left: 6px solid #2196f3;
   margin-bottom: 15px;
 }
